--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "fumadocs-ui": "^15.5.1",
     "geist": "^1.4.2",
     "input-otp": "^1.4.2",
+    "lenis": "^1.3.11",
     "lucide-react": "^0.509.0",
     "motion": "^12.10.5",
     "next": "^15.3.2",
